--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,1 +1,43 @@
-<p>signup works!</p>
+<app-grid-layout>
+    <div left>
+        <div class="signup-container">
+            <h2>Sign Up</h2>
+            <p>Welcome to our community</p>
+
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+                <div class="input-group">
+                    <label class="custom-label" for="email">Email</label>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <input matInput placeholder="test@gmail.com" id="email" formControlName="email" type="email">
+                        <mat-icon matSuffix>mail_outline</mat-icon>
+                    </mat-form-field>
+                </div>
+
+                <div class="input-group">
+                    <label class="custom-label" for="password">Password</label>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <input matInput placeholder="Enter your password" id="password" formControlName="password"
+                            [type]="hidePassword ? 'password' : 'text'">
+                        <button mat-icon-button matSuffix type="button" (click)="hidePassword = !hidePassword">
+                            <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+                        </button>
+                    </mat-form-field>
+                </div>
+
+                <button mat-flat-button color="primary" class="full-width signup-btn" type="submit"
+                    [disabled]="loginForm.invalid">
+                    SIGN UP
+                </button>
+
+                <p class="login-text">
+                    Already have an account? <a href="#" class="login-link">Log in</a>
+                </p>
+            </form>
+        </div>
+        
+    </div>
+    <ng-container right>
+        <img [src]="imagePath" alt="signup-image" />
+    </ng-container>
+</app-grid-layout>
