--- a/src/app/components/grid-layout/grid-layout.component.scss
+++ b/src/app/components/grid-layout/grid-layout.component.scss
@@ -17,8 +17,12 @@
     place-self: center;
     // padding: 20px;
     width: 30rem;
-    height: 35rem;
+    height: 39rem;
     // border: 1px solid black;
+    img{
+        height: 40px;
+        width: 40%;
+    }
 }
 
 .right {
@@ -26,8 +30,5 @@
     justify-content: center;
     align-items: center;
 
-    img {
-        max-width: 100%;
-        height: auto;
-    }
+   
 }
