--- a/src/app/components/grid-layout/grid-layout.component.scss
+++ b/src/app/components/grid-layout/grid-layout.component.scss
@@ -17,7 +17,7 @@
     place-self: center;
     // padding: 20px;
     width: 30rem;
-    height: 39rem;
+    height: 90%;
     // border: 1px solid black;
     img{
         height: 40px;
