--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,8 +1,8 @@
 <app-grid-layout>
     <div left>
-        <div class="signup-container">
-            <h2>Sign Up</h2>
-            <p>Welcome to our community</p>
+        <div class="login-container">
+            <h2>Welcome Back!</h2>
+            <p>Sign in to continue to Budget Tracker</p>
 
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
@@ -25,19 +25,24 @@
                     </mat-form-field>
                 </div>
 
-                <button mat-flat-button color="primary" class="full-width signup-btn" type="submit"
+                <div class="options">
+                    <mat-checkbox formControlName="rememberMe">Remember me</mat-checkbox>
+                    <a (click)="goToResetPassword()" class="forgot-password">Forgot Password?</a>
+                </div>
+
+                <button mat-flat-button color="primary" class="full-width login-btn" type="submit"
                     [disabled]="loginForm.invalid">
-                    SIGN UP
+                    LOG IN
                 </button>
 
-                <p class="login-text">
-                    Already have an account? <a href="#" class="login-link">Log in</a>
+                <p class="signup-text">
+                    Don’t have an account? <a (click)="goToSignup()" class="signup-link">Sign Up</a>
                 </p>
             </form>
         </div>
-        
+
     </div>
     <ng-container right>
-        <img [src]="imagePath" alt="signup-image" />
+        <img [src]="imagePath" alt="login-image" />
     </ng-container>
 </app-grid-layout>
