--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -1,7 +1,7 @@
 .login-container {
     // max-width: 400px;
     margin: auto;
-    padding: 5rem 0 0 0;
+    padding: 30% 0 0 0;
     // text-align: center;
 
     h2 {
@@ -47,9 +47,9 @@
         .forgot-password {
             color: blue;
             text-decoration: none;
+            cursor: pointer;
         }
     }
-
 
     .login-btn {
         background: #6c44f3;
@@ -67,7 +67,9 @@
         .signup-link {
             color: #6c44f3;
             text-decoration: none;
+           
             font-weight: bold;
+            cursor: pointer;
         }
     }
 
