--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -14,6 +14,8 @@
     display: flex;
     flex-direction: column;
     padding-top: 20px;
+    border-radius: 8px;
+    margin: 0 16px;
   
     a {
       display: flex;
@@ -38,6 +40,8 @@
   
     .active {
       background: #6c44f3;
+      // margin: 0 16px;
+      border-radius: 8px;
       color: white;
     }
   }
@@ -45,6 +49,9 @@
   .sidebar.collapsed .nav-links a {
     justify-content: center;
     font-size: 0;
+    img{
+      margin-right: 0;
+    }
   }
   
   .sidebar.collapsed .nav-links a mat-icon {
