--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -8,14 +8,14 @@
               <div class="input-group-row">
                 <div class="input-group half-width">
                   <label class="custom-label" for="firstName">First Name</label>
-                  <mat-form-field appearance="outline" class="full-width">
+                  <mat-form-field appearance="outline" class="full-width dense-2">
                     <input matInput id="firstName" formControlName="firstName" placeholder="John" type="text">
                   </mat-form-field>
                 </div>
           
                 <div class="input-group half-width">
                   <label class="custom-label" for="lastName">Last Name</label>
-                  <mat-form-field appearance="outline" class="full-width">
+                  <mat-form-field appearance="outline" class="full-width dense-2">
                     <input matInput id="lastName" formControlName="lastName" placeholder="Doe" type="text">
                   </mat-form-field>
                 </div>
@@ -23,7 +23,7 @@
           
               <div class="input-group">
                 <label class="custom-label" for="email">Email</label>
-                <mat-form-field appearance="outline" class="full-width">
+                <mat-form-field appearance="outline" class="full-width dense-2">
                   <input matInput id="email" formControlName="email" placeholder="test@gmail.com" type="email">
                   <mat-icon matSuffix>mail_outline</mat-icon>
                 </mat-form-field>
@@ -31,26 +31,26 @@
           
               <div class="input-group">
                 <label class="custom-label" for="password">Password</label>
-                <mat-form-field appearance="outline" class="full-width">
+                <mat-form-field appearance="outline" class="full-width dense-2">
                   <input matInput id="password" formControlName="password"
-                    [type]="hidePassword ? 'password' : 'text'" placeholder="Enter your password">
-                  <button mat-icon-button matSuffix type="button" (click)="hidePassword = !hidePassword">
-                    <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
-                  </button>
+                    [type]="hidePassword() ? 'password' : 'text'" placeholder="Enter your password">
+                    <button mat-icon-button matSuffix type="button" (click)="togglePasswordVisibility()">
+                      <mat-icon>{{ passwordVisibilityIcon() }}</mat-icon>
+                    </button>
                 </mat-form-field>
               </div>
           
               <div class="input-group">
                 <label class="custom-label" for="confirmPassword">Confirm Password</label>
-                <mat-form-field appearance="outline" class="full-width">
+                <mat-form-field appearance="outline" class="full-width dense-2">
                   <input matInput id="confirmPassword" formControlName="confirmPassword"
-                    [type]="hidePassword ? 'password' : 'text'" placeholder="Re-enter your password">
+                    [type]="hidePassword() ? 'password' : 'text'" placeholder="Re-enter your password">
                 </mat-form-field>
               </div>
           
               <div class="input-group">
                 <label class="custom-label" for="budgetLimit">Budget Limit</label>
-                <mat-form-field appearance="outline" class="full-width">
+                <mat-form-field appearance="outline" class="full-width dense-2">
                   <input matInput id="budgetLimit" formControlName="budgetLimit" placeholder="Enter your budget limit" type="number">
                 </mat-form-field>
               </div>
