--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -17,10 +17,12 @@
         font-weight: 400;
     }
 
+    
+
     .input-group {
         display: flex;
         flex-direction: column;
-        height: 90px;
+        height: 75px;
     }
 
     .input-group-row {
@@ -53,7 +55,13 @@
         font-weight: 600;
         height: 48px;
         border-radius: 5px;
+
     }
+    .signup-btn:disabled {
+        cursor: not-allowed;
+        opacity: 0.7; /* Reduce opacity for disabled state */
+        background-color: #ccc; /* Change background color for disabled state */
+      }
 
     .login-text {
         margin-top: 0.2rem;
