added-Auth-Guard-Api-Call-login-signup

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,7 +31,7 @@
           <button mat-button>
             <mat-icon>person</mat-icon> Profile
           </button>
-          <button mat-button>
+          <button mat-button (click)="logout()">
             <mat-icon>logout</mat-icon> Logout
           </button>
         </div>
