--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -59,6 +59,13 @@
         border-radius: 5px;
     }
 
+    .login-btn:disabled {
+        cursor: not-allowed;
+        opacity: 0.7; 
+        background-color: #ccc; 
+      }
+
+
     .signup-text {
         margin-top: 0.2rem;
         font-size: 14px;
