--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -59,8 +59,8 @@
     }
     .signup-btn:disabled {
         cursor: not-allowed;
-        opacity: 0.7; /* Reduce opacity for disabled state */
-        background-color: #ccc; /* Change background color for disabled state */
+        opacity: 0.7;
+        background-color: #ccc;
       }
 
     .login-text {
