--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,20 +1,20 @@
-<aside class="sidebar" [class.collapsed]="isCollapsed">
+<aside class="sidebar" [class.collapsed]="isCollapsed()">
     <nav class="nav-links">
         <a routerLink="/home/analytics" routerLinkActive="active">
             <img src="assets/images/analytics.svg" alt="Analytics">
-            <span *ngIf="!isCollapsed">Analytics</span>
+            <span *ngIf="isCollapsed">Analytics</span>
         </a>
         <a routerLink="/home/expense" routerLinkActive="active">
             <img src="assets/images/expenses.svg" alt="Analytics">
-            <span *ngIf="!isCollapsed">Expenses</span>
+            <span *ngIf="isCollapsed">Expenses</span>
         </a>
         <a routerLink="/home/users" routerLinkActive="active">
             <img src="assets/images/users.svg" alt="Analytics">
-            <span *ngIf="!isCollapsed">Users</span>
+            <span *ngIf="isCollapsed">Users</span>
         </a>
         <a (click)="logout()" routerLink="/logout">
             <img src="assets/images/logout.svg" alt="Analytics">
-            <span *ngIf="!isCollapsed">Logout</span>
+            <span *ngIf="isCollapsed">Logout</span>
         </a>
     </nav>
 </aside>
