--- a/src/app/pages/expenses-dashboard/expenses-dashboard.component.html
+++ b/src/app/pages/expenses-dashboard/expenses-dashboard.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="filter-item search">
-      <input type="text" placeholder="🔍 Search">
+      <input type="text" placeholder="🔍 Search" (input)="applyFilter($event)">
     </div>
   </div>
   </div>
@@ -50,21 +50,15 @@
     <!-- Date Column -->
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-    </ng-container>
-  
-    <!-- User Column -->
-    <ng-container matColumnDef="user">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> User </th>
-      <td mat-cell *matCellDef="let element"> {{element.user}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.date | date }} </td>
     </ng-container>
   
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="accent"><mat-icon>edit</mat-icon></button>
-        <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
+        <button mat-icon-button color="accent" (click)="openDialog('edit', element)"><mat-icon>edit</mat-icon></button>
+        <button mat-icon-button color="warn" (click)="openDialog('delete', element)"><mat-icon>delete</mat-icon></button>
       </td>
     </ng-container>
   
