added-package-canvas-analysis

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <nav class="nav-links">
         <a routerLink="/home/analytics" routerLinkActive="active">
             <img src="assets/images/analytics.svg" alt="Analytics">
-            <span *ngIf="isCollapsed">Analytics</span>
+            <span *ngIf="isCollapsed">Analysis</span>
         </a>
         <a routerLink="/home/expense" routerLinkActive="active">
             <img src="assets/images/expenses.svg" alt="Analytics">
