--- a/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,68 @@
-<p>user-dashboard works!</p>
+<div class="users-header">
+    <h2>Users</h2>
+  </div>
+  <div class="users-header">
+    <h4>Users</h4>
+    <div class="filters">
+      <div class="filter-item">
+        <label for="sort">Sort By</label>
+        <select id="sort">
+          <option value="all">All</option>
+          <option value="name">By Name</option>
+          <option value="role">By Role</option>
+        </select>
+      </div>
+  
+      <div class="filter-item search">
+        <input type="text" placeholder="🔍 Search" (input)="applyFilter($event)" />
+      </div>
+    </div>
+  </div>
+  
+  <table mat-table [dataSource]="dataSource" matSort>
+    <!-- First Name Column -->
+    <ng-container matColumnDef="first_name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+      <td mat-cell *matCellDef="let user"> {{ user.first_name }} </td>
+    </ng-container>
+  
+    <!-- Last Name Column -->
+    <ng-container matColumnDef="last_name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+      <td mat-cell *matCellDef="let user"> {{ user.last_name }} </td>
+    </ng-container>
+  
+    <!-- Email Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+      <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
+    </ng-container>
+  
+    <!-- Role Column -->
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+      <td mat-cell *matCellDef="let user"> {{ user.role }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="accent" (click)="openDialog('edit', element)"><mat-icon>edit</mat-icon></button>
+          <button mat-icon-button color="warn" (click)="openDialog('delete', element)"><mat-icon>delete</mat-icon></button>
+        </td>
+      </ng-container>
+  
+    <!-- Table Header and Row -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
+  <div class="custom-paginator">
+    <div class="left">
+      {{ rangeLabel() }}
+    </div>
+  
+    <div class="right">
+      <mat-paginator></mat-paginator>
+    </div>
+  </div>
