--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
         <hr />
 
         <div class="dropdown-actions">
-          <button mat-button>
+          <button mat-button (click)="goToProfile()">
             <mat-icon>person</mat-icon> Profile
           </button>
           <button mat-button (click)="logout()">
