--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,13 @@
 <header class="navbar">
     <div class="logo">
       <img src="assets/images/trackerLogo.svg" alt="Budget Tracker Logo">
-      <div class="vertical-divider"></div>
+      <ng-container *ngIf="isUserProfileRoute()">
+         <div class="vertical-divider"></div>
       <button mat-icon-button (click)="toggleSidebar()">
         <mat-icon>notes</mat-icon>
       </button>
+      </ng-container>
+     
     </div>
    
     <div class="nav-icons">
