added-expenditure-calculation

--- a/src/app/pages/expenses-dashboard/expenses-dashboard.component.html
+++ b/src/app/pages/expenses-dashboard/expenses-dashboard.component.html
@@ -37,7 +37,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Expenditure </th>
       <td mat-cell *matCellDef="let element">
         <mat-progress-bar mode="determinate" [value]="element.totalExpenditure"></mat-progress-bar>
-        {{element.totalExpenditure}}%
+        {{element.totalExpenditure}}
       </td>
     </ng-container>
   
